[package]
name = "hotreload"
version = "0.1.0"
authors = ["Nico Chatzi <nico.chatzigianis@focusrite.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = ""
repository = "https://github.com/nicochatzi/hotreload-rs"
documentation = ""
categories = [""]
readme = "README.md"

[dependencies]
macros = { package = "hotreload_macros", path = "macros" }
lib = { package = "libloading", version = "0.7.0" }
hotwatch = "0.4.5"
once_cell = "1.7.2"
cstr = "0.2.8"
libc = "0.2.94"
thiserror = "1.0.26"

[workspace]
members = ["macros"]
